# gen-ai-local-recipes

./: 01 - Environment Setup.ipynb  02 - GPU Evaluation.ipynb  03 - Model Quantization.ipynb  03.1 - Transformer Models - Query.ipynb  03.2 - Transformer Models - Chat.ipynb  04 - Knowledge Extraction.ipynb  08.2 - Diffusion Models - flux.ipynb  09 - Diffusion with LoRA.ipynb  README.md  pyproject.toml
notebooks/: 01 - Environment Setup.ipynb  02 - GPU Evaluation.ipynb  03 - Text Generation - HF.ipynb  04 - Chat - HF.ipynb  05 - Quantization - HF.ipynb  08.1 - Diffusion Models - sd.ipynb  08.2 - Diffusion Models - flux.ipynb  09 - Diffusion with LoRA.ipynb  10 - Text2Video Diffusion.ipynb  sd-Copy3.ipynb  sd-Copy4.ipynb
src/: utils.py
