[project]
name = "gen-ai-local"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Paul R Saxman", email = "saxman@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
